--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "odata-vocabularies",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Convert OData vocabularies in CSDL XML or CSDL JSON to GitHub Flavored Markdown",
   "homepage": "https://github.com/oasis-tcs/odata-vocabularies/blob/master/lib/README.md",
   "bugs": "https://github.com/oasis-tcs/odata-vocabularies/issues",
@@ -23,6 +23,7 @@
     "mocha": "^6.1.4"
   },
   "scripts": {
+    "build": "node lib/transform.js",
     "test": "mocha"
   },
   "author": "",
