--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,5 +22,6 @@ jobs:
         npm install
         npm run build --if-present
         npm test
+        git diff --quiet
       env:
         CI: true
