Gracefully ignore unknown base types

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
+		"hbenl.vscode-mocha-test-adapter",
 		"redhat.vscode-xml"
 	]
 }
