Use all potentially referenced schemas
This will allow inheritance across multiple vocabularies (not used yet)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "scripts": {
     "build": "node lib/transform.js",
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "mocha --watch"
   },
   "author": "",
   "license": "SEE LICENSE IN LICENSE.md"
