--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,6 +22,6 @@ jobs:
         npm install
         npm run build --if-present
         npm test
-        git diff --exit-code
+        git diff --exit-code vocabularies
       env:
         CI: true
