RequiredProperties for insert and update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     ],
     "xml.catalogs": [
         "./node_modules/odata-csdl/catalog.xml"
-    ]
+    ],
+    "editor.formatOnSave": false
 }
