Prettiered and linted

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,11 @@
     ],
     "xml.catalogs": [
         "./node_modules/odata-csdl/catalog.xml"
-    ]
+    ],
+    "mochaExplorer.esmLoader": false,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
 }
