--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,5 @@
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true,
+    "files.trimFinalNewlines": true
 }
