Script for updating CHANGELOG.md
How can I include `npm run changelog` in `nodejs.yml` so that it is
executed only upon merge, not for every commit to the PR branch?

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "scripts": {
     "build": "node lib/transform.js",
+    "changelog": "./tools/changelog.sh",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch"
   },
