conditional step for changelog

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,3 +28,8 @@ jobs:
           git diff --exit-code vocabularies
         env:
           CI: true
+      - name: write changelog
+        if: ${{ github.event.pull_request.merged == true }}
+        run: npm run changelog
+        env:
+          CI: true
