--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "devDependencies": {
     "c8": "^7.3.1",
     "eslint": "^7.21.0",
-    "mocha": "^8.3.1"
+    "mocha": "^8.3.1",
+    "standard-changelog": "^2.0.27"
   },
   "scripts": {
     "build": "node lib/transform.js",
