--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,15 @@
 {
-    "json.schemas": [
-        {
-            "fileMatch": [
-                "examples/*.json",
-                "test/*.json"
-            ],
-            "url": "./node_modules/odata-csdl/schemas/csdl.schema.json"
-        }
-    ],
-    "xml.catalogs": [
-        "./node_modules/odata-csdl/catalog.xml"
-    ],
-    "mochaExplorer.esmLoader": false,
-    "[javascript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
-    },
-    "files.insertFinalNewline": true,
-    "files.trimFinalNewlines": true
+  "json.schemas": [
+    {
+      "fileMatch": ["examples/*.json", "test/*.json"],
+      "url": "./node_modules/odata-csdl/schemas/csdl.schema.json"
+    }
+  ],
+  "xml.catalogs": ["./node_modules/odata-csdl/catalog.xml"],
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "cSpell.words": ["depr", "emph", "qname", "rarr", "vola"]
 }
