--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "c8": "^7.12.0",
     "eslint": "^8.29.0",
-    "mocha": "^10.1.0"
+    "mocha": "^10.2.0",
+    "prettier": "^2.8.1"
   },
   "scripts": {
     "build": "node lib/transform.js",
