--- a/vocabularies/Org.OData.Measures.V1.json
+++ b/vocabularies/Org.OData.Measures.V1.json
@@ -1,97 +1,68 @@
 {
-    "$Version": "4.0",
-    "$Reference": {
-        "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.json": {
-            "$Include": [
-                {
-                    "$Namespace": "Org.OData.Core.V1",
-                    "$Alias": "Core"
-                }
-            ]
-        },
-        "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Validation.V1.json": {
-            "$Include": [
-                {
-                    "$Namespace": "Org.OData.Validation.V1",
-                    "$Alias": "Validation"
-                }
-            ]
-        }
+  "$Version": "4.0",
+  "$Reference": {
+    "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Core.V1.json": {
+      "$Include": [{ "$Namespace": "Org.OData.Core.V1", "$Alias": "Core" }]
     },
-    "Org.OData.Measures.V1": {
-        "$Alias": "Measures",
-        "@Core.Description": "Terms describing monetary amounts and measured quantities",
-        "@Core.Links": [
-            {
-                "rel": "alternate",
-                "href": "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Measures.V1.xml"
-            },
-            {
-                "rel": "latest-version",
-                "href": "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Measures.V1.json"
-            },
-            {
-                "rel": "describedby",
-                "href": "https://github.com/oasis-tcs/odata-vocabularies/blob/main/vocabularies/Org.OData.Measures.V1.md"
-            }
-        ],
-        "ISOCurrency": {
-            "$Kind": "Term",
-            "$AppliesTo": [
-                "Property"
-            ],
-            "@Core.Description": "The currency for this monetary amount as an ISO 4217 currency code"
-        },
-        "Scale": {
-            "$Kind": "Term",
-            "$Type": "Edm.Byte",
-            "$AppliesTo": [
-                "Property"
-            ],
-            "@Core.Description": "The number of significant decimal places in the scale part (less than or equal to the number declared in the Scale facet)",
-            "@Core.RequiresType": "Edm.Decimal"
-        },
-        "Unit": {
-            "$Kind": "Term",
-            "$AppliesTo": [
-                "Property"
-            ],
-            "@Core.Description": "The unit of measure for this measured quantity, e.g. cm for centimeters or % for percentages"
-        },
-        "UNECEUnit": {
-            "$Kind": "Term",
-            "$AppliesTo": [
-                "Property"
-            ],
-            "@Core.Description": "The unit of measure for this measured quantity, according to the [UN/CEFACT Recommendation 20](http://tfig.unece.org/contents/recommendation-20.htm)"
-        },
-        "DurationGranularity": {
-            "$Kind": "Term",
-            "$Type": "Measures.DurationGranularityType",
-            "$AppliesTo": [
-                "Property"
-            ],
-            "@Core.Description": "The minimum granularity of duration values.",
-            "@Core.LongDescription": "Absence of this annotation means a granularity of seconds with sub-seconds according to the Precision facet.",
-            "@Core.RequiresType": "Edm.Duration"
-        },
-        "DurationGranularityType": {
-            "$Kind": "TypeDefinition",
-            "$UnderlyingType": "Edm.String",
-            "@Validation.AllowedValues": [
-                {
-                    "Value": "days",
-                    "@Core.Description": "Duration in days, e.g. `P1D`"
-                },
-                {
-                    "Value": "hours",
-                    "@Core.Description": "Duration in days and hours, e.g. `P1DT23H`"
-                },
-                {
-                    "Value": "minutes",
-                    "@Core.Description": "Duration in days, hours, and minutes, e.g. `P1DT23H59M`"
-                }
-            ]
-        }
+    "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Validation.V1.json": {
+      "$Include": [{ "$Namespace": "Org.OData.Validation.V1", "$Alias": "Validation" }]
     }
+  },
+  "Org.OData.Measures.V1": {
+    "$Alias": "Measures",
+    "@Core.Description": "Terms describing monetary amounts and measured quantities",
+    "@Core.Links": [
+      {
+        "rel": "alternate",
+        "href": "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Measures.V1.xml"
+      },
+      {
+        "rel": "latest-version",
+        "href": "https://oasis-tcs.github.io/odata-vocabularies/vocabularies/Org.OData.Measures.V1.json"
+      },
+      {
+        "rel": "describedby",
+        "href": "https://github.com/oasis-tcs/odata-vocabularies/blob/main/vocabularies/Org.OData.Measures.V1.md"
+      }
+    ],
+    "ISOCurrency": {
+      "$Kind": "Term",
+      "$AppliesTo": ["Property"],
+      "@Core.Description": "The currency for this monetary amount as an ISO 4217 currency code"
+    },
+    "Scale": {
+      "$Kind": "Term",
+      "$Type": "Edm.Byte",
+      "$AppliesTo": ["Property"],
+      "@Core.Description": "The number of significant decimal places in the scale part (less than or equal to the number declared in the Scale facet)",
+      "@Core.RequiresType": "Edm.Decimal"
+    },
+    "Unit": {
+      "$Kind": "Term",
+      "$AppliesTo": ["Property"],
+      "@Core.Description": "The unit of measure for this measured quantity, e.g. cm for centimeters or % for percentages"
+    },
+    "UNECEUnit": {
+      "$Kind": "Term",
+      "$AppliesTo": ["Property"],
+      "@Core.Description": "The unit of measure for this measured quantity, according to the [UN/CEFACT Recommendation 20](http://tfig.unece.org/contents/recommendation-20.htm)"
+    },
+    "DurationGranularity": {
+      "$Kind": "Term",
+      "$Type": "Measures.DurationGranularityType",
+      "$AppliesTo": ["Property"],
+      "@Core.Description": "The minimum granularity of duration values.",
+      "@Core.LongDescription": "Absence of this annotation means a granularity of seconds with sub-seconds according to the Precision facet.",
+      "@Core.RequiresType": "Edm.Duration"
+    },
+    "DurationGranularityType": {
+      "$Kind": "TypeDefinition",
+      "$UnderlyingType": "Edm.String",
+      "@Validation.AllowedValues": [
+        { "Value": "days", "@Core.Description": "Duration in days, e.g. `P1D`" },
+        { "Value": "hours", "@Core.Description": "Duration in days and hours, e.g. `P1DT23H`" },
+        { "Value": "minutes", "@Core.Description": "Duration in days, hours, and minutes, e.g. `P1DT23H59M`" }
+      ]
+    }
+  }
 }
