--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "odata-vocabularies",
-  "version": "0.5",
+  "version": "0.5.1",
   "description": "Convert OData vocabularies in CSDL XML or CSDL JSON to GitHub Flavored Markdown",
   "homepage": "https://github.com/oasis-tcs/odata-vocabularies/blob/main/lib/README.md",
   "bugs": "https://github.com/oasis-tcs/odata-vocabularies/issues",
   "repository": {
     "type": "git",
-    "url": "https://github.com/oasis-tcs/odata-vocabularies.git"
+    "url": "git+https://github.com/oasis-tcs/odata-vocabularies.git"
   },
   "files": [
     "lib/*"
@@ -18,11 +18,11 @@
   "dependencies": {
     "colors": "^1.4.0",
     "minimist": "^1.2.6",
-    "odata-csdl": "^0.8.2"
+    "odata-csdl": "^0.9.0"
   },
   "devDependencies": {
-    "c8": "^8.0.0",
-    "eslint": "^8.44.0",
+    "c8": "^9.1.0",
+    "eslint": "^8.56.0",
     "mocha": "^10.1.0"
   },
   "scripts": {
