Build with pandoc

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "bin": {
     "odata-vocab2md": "lib/cli.js"
   },
-  "main": "lib/csdl2markdown.js",
+  "exports": {
+    ".": "./lib/csdl2markdown.js",
+    "./pandoc": "./lib/pandoc.js",
+    "./pages": "./lib/pages.js"
+  },
   "dependencies": {
     "colors": "^1.4.0",
     "odata-csdl": "^0.9.5"
@@ -26,6 +30,7 @@
   },
   "scripts": {
     "build": "node lib/transform.js",
+    "pages": "node lib/pages.js",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch"
   },
