--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build with pandoc
         run: |
           npm ci
-          npm run pages "OASIS OData TC"
+          npm run pages 'OASIS OData TC'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
