Build github.io pages with pandoc instead of Jekyll (#248)

--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "bin": {
     "odata-vocab2md": "lib/cli.js"
   },
-  "main": "lib/csdl2markdown.js",
+  "exports": {
+    ".": "./lib/csdl2markdown.js",
+    "./pandoc": "./lib/pandoc.js",
+    "./pages": "./lib/pages.js",
+    "./template": "./assets/template.html"
+  },
   "dependencies": {
     "colors": "^1.4.0",
-    "odata-csdl": "^0.9.5"
+    "odata-csdl": "^0.9.5",
+    "pandoc-filter": "^2.2.0"
   },
   "devDependencies": {
     "c8": "^9.1.0",
@@ -26,6 +32,7 @@
   },
   "scripts": {
     "build": "node lib/transform.js",
+    "pages": "node lib/pages.js",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch"
   },
