--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npm ci
           npm run build --if-present
-          npm test
+          npm test test/csdl2markdown.test.js
           git diff --exit-code vocabularies
         env:
           CI: true
