--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "url": "git+https://github.com/oasis-tcs/odata-vocabularies.git"
   },
   "files": [
-    "lib/*"
+    "lib/*",
+    "assets/*"
   ],
   "bin": {
     "odata-vocab2md": "lib/cli.js"
