--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ".": "./lib/csdl2markdown.js",
     "./pandoc": "./lib/pandoc.js",
     "./pages": "./lib/pages.js",
+    "./serve-pages": "./lib/serve-pages.js",
     "./template": "./assets/template.html"
   },
   "dependencies": {
@@ -32,7 +33,8 @@
   },
   "scripts": {
     "build": "node lib/transform.js",
-    "pages": "node lib/pages.js",
+    "pages": "node lib/pages.js \"OASIS OData TC\"",
+    "serve-pages": "node lib/serve-pages.js",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch"
   },
