--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "c8": "^9.1.0",
     "eslint": "^8.56.0",
+    "express": "^4.19.2",
     "mocha": "^10.1.0"
   },
   "scripts": {
