--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ".": "./lib/csdl2markdown.js",
     "./pandoc": "./lib/pandoc.js",
     "./pages": "./lib/pages.js",
+    "./serve-pages": "./lib/serve-pages.js",
     "./template": "./assets/template.html"
   },
   "dependencies": {
@@ -29,11 +30,13 @@
   "devDependencies": {
     "c8": "^9.1.0",
     "eslint": "^8.56.0",
+    "express": "^4.19.2",
     "mocha": "^10.1.0"
   },
   "scripts": {
     "build": "node lib/transform.js",
     "pages": "node lib/pages.js \"OASIS OData TC\"",
+    "serve-pages": "node lib/serve-pages.js",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch"
   },
