--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "serve-pages": "node lib/serve-pages.js",
     "test": "c8 -r html -r text mocha",
     "watch": "mocha --watch",
-    "build-spec": "node -e \"require('odata-specs/build')\"",
+    "build-spec": "node -e \"require('odata-specs/build')\" - \"-F=lib/vocab2html.js\"",
     "build-pdf": "node -e \"require('odata-specs/build-pdf')\"",
     "build-zip": "node -e \"require('odata-specs/zip')\""
   },
